cabal-version: 3.0

name: relude-example
version: 0.0.1.0

executable relude-example
  default-language: Haskell2010
  main-is: Main.hs
  hs-source-dirs: exe
  other-modules: Paths_relude_example
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: base >=4.7 && <5
  build-depends: relude ^>=1.1.0.0
